--- a/src/components/css/teambuilderpage.css
+++ b/src/components/css/teambuilderpage.css
@@ -2,6 +2,11 @@
   width: 100%;
 }
 
+.poke-search-content {
+  width: 100%;
+  max-width: 4000px;
+}
+
 .team-build-page {
   width: 100%;
   max-width: 4000px;
